<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">GoldRiver</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="loading">加载中...</string>
    <string name="sousuokuang">搜你想要的</string>
    <string name="systemsetting">系统设置</string>
    <string name="read">轻阅读</string>
    <string name="smallmovie">微电影</string>
    <string name="kaifazhe">Android</string>
    <string name="VersionCode">V 1.1.5\'</string>
    <string name="jumovie">云视频</string>
    <string name="joinqq">加入群聊</string>
    <string name="tuijian">推荐好友</string>
    <string name="clearcahe">清除缓存</string>
    <string name="checkupdate">检查更新</string>
    <string name="about">关于</string>
    <string name="theabout">1、本软件所有内容均来自网络，Api使用非法手段获取，仅供测试，请在24小时内删除。\n2、感谢干货营提供的Android和妹子图Api，感谢各开源框架的免费使用。\n3、软件作者：HDY\n4、联系邮箱：1596889407@qq.com</string>

    <string name="title_activity_video_fullscreen">VideoFullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="meizitu">妹子图</string>
</resources>
